--- a/Todo App/frontend/package.json
+++ b/Todo App/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "build": "npx @tailwindcss/cli -i ./src/styles/input.css -o ./src/styles/output.css --watch"
+    "build": "npx @tailwindcss/cli -i ./src/styles/input.css -o ./src/styles/output.css"
   },
   "keywords": [],
   "author": "",
